@@ -1,6 +1,5 @@
 package com.modive.rewardservice.service;
 
-import com.modive.rewardservice.client.UserClient;
 import com.modive.rewardservice.domain.Reward;
 import com.modive.rewardservice.domain.RewardReason;
 import com.modive.rewardservice.domain.RewardType;
@@ -9,262 +8,381 @@ import com.modive.rewardservice.repository.RewardRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.test.util.ReflectionTestUtils;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.*;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.YearMonth;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.verify;
 
-@SpringBootTest
+@ExtendWith(MockitoExtension.class)
 class AdminRewardServiceTest {
 
-    @Autowired
-    private AdminRewardService adminRewardService;
-
-    @MockBean
+    @Mock
     private RewardRepository rewardRepository;
 
-    @MockBean
-    private UserClient userClient;
+    @InjectMocks
+    private AdminRewardService adminRewardService;
+
+    private Reward sampleReward;
+    private LocalDateTime now;
 
     @BeforeEach
     void setUp() {
-        // 🔧 간소화된 UserClient Mock 설정
-        when(userClient.getUserIdByEmail(anyString())).thenReturn(1L);
-        when(userClient.getEmailByUserId(anyLong())).thenReturn("user@example.com");
-        // 🚫 제거: getEmailsByUserIds, existsByEmail, existsById
+        now = LocalDateTime.now();
+        sampleReward = Reward.builder()
+                .userId("test-user-id")
+                .amount(100L)
+                .type(RewardType.EARNED)
+                .description("종합점수")
+                .balanceSnapshot(1000L)
+                .driveId("drive-123")
+                .build();
+
+        // Reflection을 사용하여 createdAt 필드 설정 (테스트용)
+        try {
+            java.lang.reflect.Field createdAtField = Reward.class.getDeclaredField("createdAt");
+            createdAtField.setAccessible(true);
+            createdAtField.set(sampleReward, now);
+
+            java.lang.reflect.Field idField = Reward.class.getDeclaredField("id");
+            idField.setAccessible(true);
+            idField.set(sampleReward, 1L);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to set test fields", e);
+        }
     }
 
-    @Test
-    @DisplayName("1. 총 발급 수 조회 - 전체 기간 총 발급 수와 변화율")
-    void getTotalIssuedTest() {
-        // given
-        when(rewardRepository.getTotalIssued()).thenReturn(1247890L);
+    // ===== 기본 통계 조회 메서드 테스트 =====
 
-        LocalDateTime now = LocalDateTime.now();
-        when(rewardRepository.countIssuedBefore(any())).thenReturn(1000000L, 800000L);
+    @Test
+    @DisplayName("1. 총 발급 수 조회 성공")
+    void getTotalIssued_Success() {
+        // given
+        given(rewardRepository.getTotalIssued()).willReturn(1247890L);
 
         // when
-        long totalIssued = adminRewardService.getTotalIssued();
-        double changeRate = adminRewardService.getChangeRate();
+        long result = adminRewardService.getTotalIssued();
 
         // then
-        assertThat(totalIssued).isEqualTo(1247890L);
-        assertThat(changeRate).isEqualTo(25.0); // (1000000 - 800000) / 800000 * 100
-
-        verify(rewardRepository, times(1)).getTotalIssued();
-        verify(rewardRepository, times(2)).countIssuedBefore(any());
+        assertThat(result).isEqualTo(1247890L);
+        verify(rewardRepository).getTotalIssued();
     }
 
     @Test
-    @DisplayName("2. 월간 발급 수 조회 - 이번 달 발급 수와 지난 달 대비 변화율")
-    void getMonthlyIssuedTest() {
+    @DisplayName("2. 일일 변화율 조회 - 정상 케이스")
+    void getChangeRate_Success() {
         // given
-        LocalDateTime currentStart = YearMonth.now().atDay(1).atStartOfDay();
-        LocalDateTime currentEnd = YearMonth.now().atEndOfMonth().atTime(23, 59, 59);
-        LocalDateTime prevStart = YearMonth.now().minusMonths(1).atDay(1).atStartOfDay();
-        LocalDateTime prevEnd = YearMonth.now().minusMonths(1).atEndOfMonth().atTime(23, 59, 59);
-
-        when(rewardRepository.countIssuedBetween(eq(currentStart), eq(currentEnd))).thenReturn(20700L);
-        when(rewardRepository.countIssuedBetween(eq(prevStart), eq(prevEnd))).thenReturn(18400L);
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(150L) // 오늘
+                .willReturn(100L); // 어제
 
         // when
-        long monthlyIssued = adminRewardService.getCurrentMonthIssued();
-        double changeRate = adminRewardService.getMonthlyChangeRate();
+        double result = adminRewardService.getChangeRate();
 
         // then
-        assertThat(monthlyIssued).isEqualTo(20700L);
-        assertThat(changeRate).isEqualTo(12.5); // (20700 - 18400) / 18400 * 100
+        assertThat(result).isEqualTo(50.0); // (150-100)/100 * 100 = 50%
+        verify(rewardRepository, org.mockito.Mockito.times(2))
+                .countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class));
     }
 
     @Test
-    @DisplayName("3. 일 평균 발급 수 조회 - 오늘 발급 수와 어제 대비 변화율")
-    void getDailyAverageChangeRateTest() {
+    @DisplayName("3. 일일 변화율 조회 - 어제 0건인 경우")
+    void getChangeRate_YesterdayZero() {
         // given
-        when(rewardRepository.countIssuedBetween(any(), any()))
-                .thenReturn(730L)  // todayCount
-                .thenReturn(690L); // yesterdayCount
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(150L) // 오늘
+                .willReturn(0L);  // 어제
 
         // when
-        double result = adminRewardService.getDailyAverageChangeRate();
+        double result = adminRewardService.getChangeRate();
 
         // then
-        assertThat(result).isEqualTo(5.8); // (730 - 690) / 690 * 100 = 5.8
+        assertThat(result).isEqualTo(100.0); // 어제 0건이면 100% 증가
     }
 
     @Test
-    @DisplayName("4. 사용자당 평균 발급 수 조회 - 오늘 사용자당 평균과 어제 대비 변화율")
-    void getPerUserAverageChangeRateTest() {
+    @DisplayName("4. 일일 변화율 조회 - 둘 다 0건인 경우")
+    void getChangeRate_BothZero() {
         // given
-        LocalDate today = LocalDate.now();
-        LocalDateTime todayStart = today.atStartOfDay();
-        LocalDateTime todayEnd = today.atTime(23, 59, 59);
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(0L) // 오늘
+                .willReturn(0L); // 어제
 
-        LocalDateTime yesterdayStart = today.minusDays(1).atStartOfDay();
-        LocalDateTime yesterdayEnd = today.minusDays(1).atTime(23, 59, 59);
+        // when
+        double result = adminRewardService.getChangeRate();
 
-        when(rewardRepository.countIssuedBetween(todayStart, todayEnd)).thenReturn(15800L);
-        when(rewardRepository.countDistinctUsersBetween(todayStart, todayEnd)).thenReturn(100L);
+        // then
+        assertThat(result).isEqualTo(0.0); // 둘 다 0이면 0%
+    }
 
-        when(rewardRepository.countIssuedBetween(yesterdayStart, yesterdayEnd)).thenReturn(15480L);
-        when(rewardRepository.countDistinctUsersBetween(yesterdayStart, yesterdayEnd)).thenReturn(100L);
+    @Test
+    @DisplayName("5. 현재 월 발급 수 조회 성공")
+    void getCurrentMonthIssued_Success() {
+        // given
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(20700L);
+
+        // when
+        long result = adminRewardService.getCurrentMonthIssued();
+
+        // then
+        assertThat(result).isEqualTo(20700L);
+    }
+
+    @Test
+    @DisplayName("6. 월간 변화율 조회 성공")
+    void getMonthlyChangeRate_Success() {
+        // given
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(22500L) // 이번 달
+                .willReturn(20000L); // 지난 달
+
+        // when
+        double result = adminRewardService.getMonthlyChangeRate();
+
+        // then
+        assertThat(result).isEqualTo(12.5); // (22500-20000)/20000 * 100 = 12.5%
+    }
+
+    @Test
+    @DisplayName("7. 현재 일평균 발급 수 조회 성공")
+    void getCurrentDailyAverageIssued_Success() {
+        // given
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(730L);
+
+        // when
+        double result = adminRewardService.getCurrentDailyAverageIssued();
+
+        // then
+        assertThat(result).isEqualTo(730.0);
+    }
+
+    @Test
+    @DisplayName("8. 현재 사용자당 평균 발급 수 조회 성공")
+    void getCurrentPerUserAverageIssued_Success() {
+        // given
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(1580L); // 총 리워드 수
+        given(rewardRepository.countDistinctUsersBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(10L); // 사용자 수
+
+        // when
+        double result = adminRewardService.getCurrentPerUserAverageIssued();
+
+        // then
+        assertThat(result).isEqualTo(158.0); // 1580/10 = 158.0
+    }
+
+    @Test
+    @DisplayName("9. 사용자당 평균 발급 수 조회 - 사용자 0명인 경우")
+    void getCurrentPerUserAverageIssued_NoUsers() {
+        // given
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(100L); // 총 리워드 수
+        given(rewardRepository.countDistinctUsersBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(0L); // 사용자 수 0명
+
+        // when
+        double result = adminRewardService.getCurrentPerUserAverageIssued();
+
+        // then
+        assertThat(result).isEqualTo(0.0);
+    }
+
+    @Test
+    @DisplayName("10. 사용자당 평균 변화율 조회 성공")
+    void getPerUserAverageChangeRate_Success() {
+        // given
+        // 오늘: 1600 리워드 / 10 사용자 = 160 평균
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(1600L) // 오늘 리워드
+                .willReturn(1500L); // 어제 리워드
+        given(rewardRepository.countDistinctUsersBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(10L) // 오늘 사용자
+                .willReturn(10L); // 어제 사용자
 
         // when
         double result = adminRewardService.getPerUserAverageChangeRate();
 
         // then
-        assertThat(result).isEqualTo(2.1); // (158 - 154.8) / 154.8 * 100
+        // 오늘 평균: 160, 어제 평균: 150, 변화율: (160-150)/150 * 100 = 6.67%
+        assertThat(result).isEqualTo(6.7); // 반올림으로 6.7
     }
 
+    // ===== 사유별 통계 조회 테스트 =====
+
     @Test
-    @DisplayName("5. 발급 사유별 총 통계 조회 - 실제 RewardReason 기준")
-    void getTotalRewardStatsTest() {
-        // given - 실제 RewardReason enum 값들 사용
-        List<Object[]> rawStats = List.of(
-                new Object[]{"종합점수", 1200L},          // TOTAL_SCORE
-                new Object[]{"이벤트미발생", 3400L},       // EVENT_NOT_OCCURRED
-                new Object[]{"MoBTI향상", 670L}          // MOBTI_IMPROVEMENT
-        );
-        when(rewardRepository.getCurrentYearIssuedGroupedByReason()).thenReturn(rawStats);
+    @DisplayName("11. 총 사유별 통계 조회 성공")
+    void getTotalRewardStats_Success() {
+        // given
+        Object[] stat1 = {"종합점수", 800L};
+        Object[] stat2 = {"이벤트미발생", 400L};
+        Object[] stat3 = {"MoBTI향상", 350L};
+        List<Object[]> mockStats = Arrays.<Object[]>asList(stat1, stat2, stat3);
+        given(rewardRepository.getCurrentYearIssuedGroupedByReason()).willReturn(mockStats);
 
         // when
         AdminRewardDto.TotalReasonStatsResponse result = adminRewardService.getTotalRewardStats();
 
         // then
         assertThat(result.getTotalRewardStatistics()).hasSize(3);
-
-        AdminRewardDto.ReasonStat firstStat = result.getTotalRewardStatistics().get(0);
-        assertThat(firstStat.getReason()).isEqualTo("종합점수");
-        assertThat(firstStat.getCount()).isEqualTo(1200L);
-        assertThat(firstStat.getRatio()).isGreaterThan(0);
-
-        // 각 사유별 통계 검증
-        Map<String, Long> reasonCounts = new HashMap<>();
-        result.getTotalRewardStatistics().forEach(stat ->
-                reasonCounts.put(stat.getReason(), stat.getCount()));
-
-        assertThat(reasonCounts.get("종합점수")).isEqualTo(1200L);
-        assertThat(reasonCounts.get("이벤트미발생")).isEqualTo(3400L);
-        assertThat(reasonCounts.get("MoBTI향상")).isEqualTo(670L);
+        assertThat(result.getTotalRewardStatistics().get(0).getReason()).isEqualTo("종합점수");
+        assertThat(result.getTotalRewardStatistics().get(0).getCount()).isEqualTo(800L);
+        assertThat(result.getTotalRewardStatistics().get(0).getRatio()).isEqualTo(51.6); // 800/1550 * 100
     }
 
     @Test
-    @DisplayName("5-2. 발급 사유별 월별 통계 조회 - 현재 월 (파라미터 없음)")
-    void getMonthlyRewardStatsByReasonCurrentMonthTest() {
-        // given - 실제 RewardReason 기준
-        List<Object[]> rawStats = List.of(
-                new Object[]{"종합점수", 800L},
-                new Object[]{"이벤트미발생", 2400L},
-                new Object[]{"MoBTI향상", 300L}
-        );
-        when(rewardRepository.getMonthlyRewardStatsByReason(anyString())).thenReturn(rawStats);
+    @DisplayName("12. 총 사유별 통계 조회 - 예외 발생 시 빈 리스트 반환")
+    void getTotalRewardStats_ExceptionHandling() {
+        // given
+        given(rewardRepository.getCurrentYearIssuedGroupedByReason())
+                .willThrow(new RuntimeException("Database error"));
 
-        // when - null 파라미터로 현재 월 조회
+        // when
+        AdminRewardDto.TotalReasonStatsResponse result = adminRewardService.getTotalRewardStats();
+
+        // then
+        assertThat(result.getTotalRewardStatistics()).isEmpty();
+    }
+
+    @Test
+    @DisplayName("13. 월별 사유별 통계 조회 성공 - 현재 월")
+    void getMonthlyRewardStatsByReason_CurrentMonth_Success() {
+        // given
+        Object[] stat1 = {"종합점수", 500L};
+        Object[] stat2 = {"이벤트미발생", 300L};
+        List<Object[]> mockStats = Arrays.<Object[]>asList(stat1, stat2);
+        given(rewardRepository.getMonthlyRewardStatsByReason(anyString())).willReturn(mockStats);
+
+        // when
         AdminRewardDto.MonthlyReasonStatsResponse result =
                 adminRewardService.getMonthlyRewardStatsByReason(null);
 
         // then
-        assertThat(result.getMonthlyRewardStatistics()).hasSize(3);
-
-        AdminRewardDto.ReasonStat firstStat = result.getMonthlyRewardStatistics().get(0);
-        assertThat(firstStat.getReason()).isEqualTo("종합점수");
-        assertThat(firstStat.getCount()).isEqualTo(800L);
-
-        // Repository 메서드가 현재 월 형식으로 호출되었는지 확인
-        verify(rewardRepository, times(1)).getMonthlyRewardStatsByReason(anyString());
+        assertThat(result.getMonthlyRewardStatistics()).hasSize(2);
+        assertThat(result.getMonthlyRewardStatistics().get(0).getReason()).isEqualTo("종합점수");
+        assertThat(result.getMonthlyRewardStatistics().get(0).getCount()).isEqualTo(500L);
+        assertThat(result.getMonthlyRewardStatistics().get(0).getRatio()).isEqualTo(62.5); // 500/800 * 100
     }
 
     @Test
-    @DisplayName("5-3. 발급 사유별 월별 통계 조회 - 특정 월 파라미터")
-    void getMonthlyRewardStatsByReasonWithParamTest() {
+    @DisplayName("14. 월별 사유별 통계 조회 성공 - 특정 월")
+    void getMonthlyRewardStatsByReason_SpecificMonth_Success() {
         // given
         String targetMonth = "2025-04";
-        List<Object[]> rawStats = List.of(
-                new Object[]{"종합점수", 650L},
-                new Object[]{"이벤트미발생", 1800L},
-                new Object[]{"MoBTI향상", 250L}
-        );
-        when(rewardRepository.getMonthlyRewardStatsByReason(targetMonth)).thenReturn(rawStats);
+        Object[] stat1 = {"종합점수", 400L};
+        List<Object[]> mockStats = Arrays.<Object[]>asList(stat1);
+        given(rewardRepository.getMonthlyRewardStatsByReason(targetMonth)).willReturn(mockStats);
 
         // when
         AdminRewardDto.MonthlyReasonStatsResponse result =
                 adminRewardService.getMonthlyRewardStatsByReason(targetMonth);
 
         // then
-        assertThat(result.getMonthlyRewardStatistics()).hasSize(3);
-
-        Map<String, Long> reasonCounts = new HashMap<>();
-        result.getMonthlyRewardStatistics().forEach(stat ->
-                reasonCounts.put(stat.getReason(), stat.getCount()));
-
-        assertThat(reasonCounts.get("종합점수")).isEqualTo(650L);
-        assertThat(reasonCounts.get("이벤트미발생")).isEqualTo(1800L);
-        assertThat(reasonCounts.get("MoBTI향상")).isEqualTo(250L);
-
-        verify(rewardRepository, times(1)).getMonthlyRewardStatsByReason(targetMonth);
+        assertThat(result.getMonthlyRewardStatistics()).hasSize(1);
+        assertThat(result.getMonthlyRewardStatistics().get(0).getRatio()).isEqualTo(100.0);
+        verify(rewardRepository).getMonthlyRewardStatsByReason(targetMonth);
     }
 
+    // ===== 월별 트렌드 조회 테스트 =====
+
     @Test
-    @DisplayName("6. 월별 씨앗 지급 통계 조회 - 최근 12개월 데이터")
-    void getMonthlyRewardTrendsTest() {
-        // given
-        List<Object[]> rawStats = List.of(
-                new Object[]{2024, 4, 12500},
-                new Object[]{2024, 5, 13000},
-                new Object[]{2024, 6, 12800}
-        );
-        when(rewardRepository.findMonthlyIssuedStatsLast12Months(any())).thenReturn(rawStats);
+    @DisplayName("15. 월별 리워드 트렌드 조회 성공")
+    void getMonthlyRewardTrends_Success() {
+        // given - 현재 시간 기준으로 동적으로 테스트 데이터 생성
+        java.time.YearMonth currentMonth = java.time.YearMonth.now();
+        java.time.YearMonth threeMonthsAgo = currentMonth.minusMonths(3);
+        java.time.YearMonth sixMonthsAgo = currentMonth.minusMonths(6);
+        java.time.YearMonth nineMonthsAgo = currentMonth.minusMonths(9);
+
+        Object[] trend1 = {threeMonthsAgo.getYear(), threeMonthsAgo.getMonthValue(), 12500};
+        Object[] trend2 = {sixMonthsAgo.getYear(), sixMonthsAgo.getMonthValue(), 13200};
+        Object[] trend3 = {nineMonthsAgo.getYear(), nineMonthsAgo.getMonthValue(), 14100};
+        List<Object[]> mockTrends = Arrays.<Object[]>asList(trend1, trend2, trend3);
+        given(rewardRepository.findMonthlyIssuedStatsLast12Months(any(LocalDateTime.class)))
+                .willReturn(mockTrends);
 
         // when
         AdminRewardDto.MonthlyStatsResponse result = adminRewardService.getMonthlyRewardTrends();
 
         // then
-        assertThat(result.getMonthlyRewardStatistics()).hasSize(12); // 항상 12개 있어야 함
+        assertThat(result.getMonthlyRewardStatistics()).hasSize(12); // 항상 12개월 데이터
 
-        // 특정 월에 대한 값만 검증
-        AdminRewardDto.MonthlyRewardStat juneStat = result.getMonthlyRewardStatistics().stream()
-                .filter(stat -> stat.getYear() == 2024 && stat.getMonth() == 6)
-                .findFirst()
-                .orElseThrow(() -> new AssertionError("2024년 6월 통계 없음"));
+        List<AdminRewardDto.MonthlyRewardStat> stats = result.getMonthlyRewardStatistics();
 
-        assertThat(juneStat.getAmount()).isEqualTo(12800);
+        // 실제 데이터가 있는 월들 확인
+        boolean hasThreeMonthsAgo = stats.stream()
+                .anyMatch(s -> s.getYear() == threeMonthsAgo.getYear()
+                        && s.getMonth() == threeMonthsAgo.getMonthValue()
+                        && s.getAmount() == 12500);
+        assertThat(hasThreeMonthsAgo).isTrue();
+
+        boolean hasSixMonthsAgo = stats.stream()
+                .anyMatch(s -> s.getYear() == sixMonthsAgo.getYear()
+                        && s.getMonth() == sixMonthsAgo.getMonthValue()
+                        && s.getAmount() == 13200);
+        assertThat(hasSixMonthsAgo).isTrue();
+
+        boolean hasNineMonthsAgo = stats.stream()
+                .anyMatch(s -> s.getYear() == nineMonthsAgo.getYear()
+                        && s.getMonth() == nineMonthsAgo.getMonthValue()
+                        && s.getAmount() == 14100);
+        assertThat(hasNineMonthsAgo).isTrue();
+
+        // 데이터가 없는 월은 amount가 0이어야 함
+        long zeroAmountCount = stats.stream()
+                .filter(s -> s.getAmount() == 0)
+                .count();
+        assertThat(zeroAmountCount).isEqualTo(9); // 12개월 중 3개월만 데이터가 있으므로 9개월은 0
+
+        // 연속된 12개월이 생성되었는지 확인 (11개월 전부터 현재 월까지)
+        java.time.YearMonth elevenMonthsAgo = currentMonth.minusMonths(11);
+        boolean hasOldestMonth = stats.stream()
+                .anyMatch(s -> s.getYear() == elevenMonthsAgo.getYear()
+                        && s.getMonth() == elevenMonthsAgo.getMonthValue());
+        assertThat(hasOldestMonth).isTrue();
+
+        boolean hasCurrentMonth = stats.stream()
+                .anyMatch(s -> s.getYear() == currentMonth.getYear()
+                        && s.getMonth() == currentMonth.getMonthValue());
+        assertThat(hasCurrentMonth).isTrue();
     }
 
     @Test
-    @DisplayName("7. 최근 씨앗 발급 내역 조회 - 페이징 처리 및 RewardReason 변환")
-    void getAllRewardHistoryTest() {
+    @DisplayName("16. 월별 리워드 트렌드 조회 - 예외 발생 시 빈 리스트 반환")
+    void getMonthlyRewardTrends_ExceptionHandling() {
         // given
-        Reward reward = Reward.builder()
-                .userId(1L)
-                .amount(12L)
-                .type(RewardType.EARNED)
-                .description("종합점수")
-                .balanceSnapshot(1000L)
-                .build();
+        given(rewardRepository.findMonthlyIssuedStatsLast12Months(any(LocalDateTime.class)))
+                .willThrow(new RuntimeException("Database error"));
 
-        // Reflection으로 id와 createdAt 설정
-        ReflectionTestUtils.setField(reward, "id", 1024L);
-        ReflectionTestUtils.setField(reward, "createdAt", LocalDateTime.of(2025, 4, 25, 10, 30));
+        // when
+        AdminRewardDto.MonthlyStatsResponse result = adminRewardService.getMonthlyRewardTrends();
 
+        // then
+        assertThat(result.getMonthlyRewardStatistics()).isEmpty();
+    }
+
+    // ===== 리워드 내역 조회 테스트 =====
+
+    @Test
+    @DisplayName("17. 전체 리워드 내역 조회 성공")
+    void getAllRewardHistory_Success() {
+        // given
         Pageable pageable = PageRequest.of(0, 10);
-        Page<Reward> page = new PageImpl<>(List.of(reward));
-        when(rewardRepository.findAllByOrderByCreatedAtDesc(pageable)).thenReturn(page);
+        List<Reward> rewards = Arrays.<Reward>asList(sampleReward);
+        Page<Reward> rewardPage = new PageImpl<>(rewards, pageable, 1);
+
+        given(rewardRepository.findAllByOrderByCreatedAtDesc(pageable)).willReturn(rewardPage);
 
         // when
         Page<AdminRewardDto.AllRewardHistoryResponse.RewardHistoryItem> result =
@@ -272,492 +390,403 @@ class AdminRewardServiceTest {
 
         // then
         assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).getRewardId()).isEqualTo("SEED_1024");
-        assertThat(result.getContent().get(0).getIssuedDate()).isEqualTo(LocalDate.of(2025, 4, 25));
-        assertThat(result.getContent().get(0).getReason()).isEqualTo("종합점수");
-        assertThat(result.getContent().get(0).getAmount()).isEqualTo(12);
+        AdminRewardDto.AllRewardHistoryResponse.RewardHistoryItem item = result.getContent().get(0);
+        assertThat(item.getRewardId()).isEqualTo("SEED_1"); // ID 설정했으므로 정확히 확인 가능
+        assertThat(item.getIssuedDate()).isEqualTo(now.toLocalDate());
+        assertThat(item.getReason()).isEqualTo("종합점수");
+        assertThat(item.getAmount()).isEqualTo(100);
     }
 
     @Test
-    @DisplayName("8. 씨앗 필터링 조회 - userId 기반 간소화된 처리")
-    void filterRewardsTest() {
+    @DisplayName("18. 전체 리워드 내역 조회 - 예외 발생")
+    void getAllRewardHistory_Exception() {
         // given
-        Reward reward = Reward.builder()
-                .userId(1L)
-                .amount(5L)
-                .type(RewardType.EARNED)
-                .description("종합점수")
-                .balanceSnapshot(1000L)
-                .build();
-
-        // Reflection으로 id와 createdAt 설정
-        ReflectionTestUtils.setField(reward, "id", 1025L);
-        ReflectionTestUtils.setField(reward, "createdAt", LocalDateTime.of(2025, 4, 26, 12, 43, 45));
-
         Pageable pageable = PageRequest.of(0, 10);
-        Page<Reward> page = new PageImpl<>(List.of(reward), pageable, 40);
+        given(rewardRepository.findAllByOrderByCreatedAtDesc(pageable))
+                .willThrow(new RuntimeException("Database error"));
 
-        when(rewardRepository.filterRewards(any(), any(), any(), any(), any())).thenReturn(page);
+        // when & then
+        assertThatThrownBy(() -> adminRewardService.getAllRewardHistory(pageable))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("리워드 내역 조회에 실패했습니다.");
+    }
+
+    // ===== 필터링 조회 테스트 - 수정된 메서드 시그니처에 맞춤 =====
+
+    @Test
+    @DisplayName("19. 리워드 필터링 조회 성공 - userId 직접 사용")
+    void filterRewards_Success() {
+        // given
+        String userId = "test-user-id";
+        String email = "test@example.com";
+        String description = "종합점수";
+        LocalDate startDate = LocalDate.of(2025, 4, 1);
+        LocalDate endDate = LocalDate.of(2025, 4, 30);
+        Pageable pageable = PageRequest.of(0, 10);
+
+        List<Reward> rewards = Arrays.<Reward>asList(sampleReward);
+        Page<Reward> rewardPage = new PageImpl<>(rewards, pageable, 1);
+        given(rewardRepository.filterRewards(
+                eq(userId), eq(description), any(LocalDateTime.class), any(LocalDateTime.class), eq(pageable)))
+                .willReturn(rewardPage);
+
+        // when - 새로운 시그니처: userId를 첫 번째 파라미터로 전달
+        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
+                userId, email, description, startDate, endDate, pageable);
+
+        // then
+        assertThat(result.getSearchResult()).hasSize(1);
+        AdminRewardDto.FilteredReward filteredReward = result.getSearchResult().get(0);
+        assertThat(filteredReward.getRewardId()).isEqualTo("SEED_1");
+        assertThat(filteredReward.getUserId()).isEqualTo(userId);
+        assertThat(filteredReward.getDescription()).isEqualTo("종합점수");
+        assertThat(filteredReward.getAmount()).isEqualTo(100);
+        assertThat(filteredReward.getCreatedAt()).isEqualTo(now);
+    }
+
+    @Test
+    @DisplayName("20. 리워드 필터링 조회 - 잘못된 날짜 범위")
+    void filterRewards_InvalidDateRange() {
+        // given
+        String userId = "test-user-id";
+        LocalDate startDate = LocalDate.of(2025, 4, 30);
+        LocalDate endDate = LocalDate.of(2025, 4, 1); // 시작일이 종료일보다 늦음
+        Pageable pageable = PageRequest.of(0, 10);
+
+        // when & then - 실제 Service는 try-catch로 IllegalArgumentException을 RuntimeException으로 감쌈
+        assertThatThrownBy(() -> adminRewardService.filterRewards(
+                userId, null, null, startDate, endDate, pageable))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("리워드 필터링에 실패했습니다.")
+                .hasCause(new IllegalArgumentException("시작일은 종료일보다 이전이어야 합니다."));
+    }
+
+    @Test
+    @DisplayName("21. 리워드 필터링 조회 - userId가 null인 경우")
+    void filterRewards_NullUserId() {
+        // given
+        Pageable pageable = PageRequest.of(0, 10);
+
+        List<Reward> rewards = Arrays.<Reward>asList(sampleReward);
+        Page<Reward> rewardPage = new PageImpl<>(rewards, pageable, 1);
+        given(rewardRepository.filterRewards(isNull(), isNull(), isNull(), isNull(), eq(pageable)))
+                .willReturn(rewardPage);
 
         // when
         AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
-                "user1@example.com",
-                "종합점수",
-                LocalDate.of(2025, 4, 1),
-                LocalDate.of(2025, 4, 30),
-                pageable
-        );
+                null, null, null, null, null, pageable);
 
         // then
         assertThat(result.getSearchResult()).hasSize(1);
-        assertThat(result.getSearchResult().get(0).getRewardId()).isEqualTo("SEED_1025");
-        assertThat(result.getSearchResult().get(0).getUserId()).isEqualTo("1");  // 🔧 email → userId
-        assertThat(result.getSearchResult().get(0).getAmount()).isEqualTo(5);
-        assertThat(result.getSearchResult().get(0).getDescription()).isEqualTo("종합점수");
-        assertThat(result.getPageInfo().getTotalElements()).isEqualTo(40);
-
-        // 🔧 간소화된 UserClient 호출 확인
-        verify(userClient, times(1)).getUserIdByEmail("user1@example.com");
-        // 🚫 배치 조회는 더 이상 사용하지 않음
     }
 
     @Test
-    @DisplayName("8-2. 씨앗 고급 검색 조회 - 새로운 검색 메서드")
-    void searchRewardsTest() {
+    @DisplayName("22. 리워드 필터링 조회 - 빈 결과")
+    void filterRewards_EmptyResult() {
         // given
-        AdminRewardDto.RewardSearchRequest searchRequest = AdminRewardDto.RewardSearchRequest.builder()
-                .email("user1@example.com")
-                .description("종합점수")
-                .startDate(LocalDate.of(2025, 4, 1))
-                .endDate(LocalDate.of(2025, 4, 30))
-                .minAmount(1L)
-                .maxAmount(100L)
-                .build();
-
-        Reward reward = Reward.builder()
-                .userId(1L)
-                .amount(5L)
-                .type(RewardType.EARNED)
-                .description("종합점수")
-                .balanceSnapshot(1000L)
-                .build();
-
-        ReflectionTestUtils.setField(reward, "id", 1025L);
-        ReflectionTestUtils.setField(reward, "createdAt", LocalDateTime.of(2025, 4, 26, 12, 43, 45));
-
+        String userId = "test-user-id";
         Pageable pageable = PageRequest.of(0, 10);
-        Page<Reward> page = new PageImpl<>(List.of(reward), pageable, 40);
 
-        when(rewardRepository.searchRewards(any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(page);
+        Page<Reward> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
+        given(rewardRepository.filterRewards(eq(userId), isNull(), isNull(), isNull(), eq(pageable)))
+                .willReturn(emptyPage);
 
         // when
-        AdminRewardDto.RewardFilterResponse result = adminRewardService.searchRewards(
-                searchRequest,
-                pageable
-        );
+        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
+                userId, null, null, null, null, pageable);
 
         // then
-        assertThat(result.getSearchResult()).hasSize(1);
-        assertThat(result.getSearchResult().get(0).getRewardId()).isEqualTo("SEED_1025");
-        assertThat(result.getSearchResult().get(0).getUserId()).isEqualTo("1");
-        assertThat(result.getSearchResult().get(0).getAmount()).isEqualTo(5);
-
-        verify(userClient, times(1)).getUserIdByEmail("user1@example.com");
-        verify(rewardRepository, times(1)).searchRewards(any(), any(), any(), any(), any(), any(), any(), any());
+        assertThat(result.getSearchResult()).isEmpty();
+        assertThat(result.getPageInfo().getTotalElements()).isEqualTo(0);
     }
 
-    @Test
-    @DisplayName("9. 운전별 씨앗 적립 내역 조회")
-    void getRewardsByDriveTest() {
-        // given
-        List<Long> driveIds = List.of(1L, 2L, 3L, 4L);
-        AdminRewardDto.RewardsByDriveRequest request = new AdminRewardDto.RewardsByDriveRequest(driveIds);
+    // ===== 운전별 리워드 조회 테스트 =====
 
-        when(rewardRepository.sumAmountByDriveId(1L)).thenReturn(Optional.of(100));
-        when(rewardRepository.sumAmountByDriveId(2L)).thenReturn(Optional.empty());
-        when(rewardRepository.sumAmountByDriveId(3L)).thenReturn(Optional.of(90));
-        when(rewardRepository.sumAmountByDriveId(4L)).thenReturn(Optional.of(80));
+    @Test
+    @DisplayName("23. 운전별 리워드 조회 성공")
+    void getRewardsByDrive_Success() {
+        // given
+        List<String> driveIds = Arrays.<String>asList("drive1", "drive2", "drive3");
+        AdminRewardDto.RewardsByDriveRequest request =
+                new AdminRewardDto.RewardsByDriveRequest(driveIds);
+
+        given(rewardRepository.sumAmountByDriveId("drive1")).willReturn(Optional.of(100));
+        given(rewardRepository.sumAmountByDriveId("drive2")).willReturn(Optional.of(250));
+        given(rewardRepository.sumAmountByDriveId("drive3")).willReturn(Optional.empty()); // 리워드 없음
 
         // when
         AdminRewardDto.RewardsByDriveResponse result = adminRewardService.getRewardsByDrive(request);
 
         // then
-        assertThat(result.getRewardsByDrive()).hasSize(4);
-        assertThat(result.getRewardsByDrive().get(0).getDriveId()).isEqualTo(1L);
+        assertThat(result.getRewardsByDrive()).hasSize(3);
+        assertThat(result.getRewardsByDrive().get(0).getDriveId()).isEqualTo("drive1");
         assertThat(result.getRewardsByDrive().get(0).getRewards()).isEqualTo(100);
-        assertThat(result.getRewardsByDrive().get(1).getDriveId()).isEqualTo(2L);
-        assertThat(result.getRewardsByDrive().get(1).getRewards()).isEqualTo(0);
-        assertThat(result.getRewardsByDrive().get(2).getDriveId()).isEqualTo(3L);
-        assertThat(result.getRewardsByDrive().get(2).getRewards()).isEqualTo(90);
-
-        verify(rewardRepository, times(4)).sumAmountByDriveId(any());
+        assertThat(result.getRewardsByDrive().get(1).getRewards()).isEqualTo(250);
+        assertThat(result.getRewardsByDrive().get(2).getRewards()).isEqualTo(0); // Optional.empty() → 0
     }
 
     @Test
-    @DisplayName("10. 날짜 범위 검증 - 시작일이 종료일보다 늦을 때 예외 발생")
-    void filterRewardsWithInvalidDateRangeTest() {
+    @DisplayName("24. 운전별 리워드 조회 - 빈 드라이브 ID 리스트")
+    void getRewardsByDrive_EmptyDriveIds() {
         // given
-        Pageable pageable = PageRequest.of(0, 10);
-        LocalDate startDate = LocalDate.of(2025, 4, 30);
-        LocalDate endDate = LocalDate.of(2025, 4, 1);
-
-        // when & then
-        assertThatThrownBy(() -> adminRewardService.filterRewards(
-                "user@example.com",
-                null,
-                startDate,
-                endDate,
-                pageable
-        )).isInstanceOf(RuntimeException.class)
-                .hasMessage("리워드 필터링에 실패했습니다.")
-                .hasCauseInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    @DisplayName("11. 사용자 존재하지 않을 때 빈 결과 반환")
-    void filterRewardsWithNonExistentUserTest() {
-        // given
-        when(userClient.getUserIdByEmail("nonexistent@example.com")).thenReturn(null);
-        Pageable pageable = PageRequest.of(0, 10);
-
-        // when
-        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
-                "nonexistent@example.com",
-                null,
-                null,
-                null,
-                pageable
-        );
-
-        // then
-        assertThat(result.getSearchResult()).isEmpty();
-        assertThat(result.getPageInfo().getTotalElements()).isEqualTo(0);
-
-        verify(userClient, times(1)).getUserIdByEmail("nonexistent@example.com");
-        verify(rewardRepository, never()).filterRewards(any(), any(), any(), any(), any());
-    }
-
-    @Test
-    @DisplayName("12. 변화율 계산 - 이전 값이 0일 때 처리")
-    void testChangeRateWhenPreviousValueIsZero() {
-        // given
-        when(rewardRepository.countIssuedBefore(any()))
-                .thenReturn(100L)  // 한 달 전
-                .thenReturn(0L);   // 두 달 전
-
-        // when
-        double changeRate = adminRewardService.getChangeRate();
-
-        // then
-        assertThat(changeRate).isEqualTo(100.0); // 이전 값이 0일 때는 100% 증가
-    }
-
-    @Test
-    @DisplayName("13. 일일 평균 - 사용자가 없을 때 처리")
-    void testPerUserAverageWhenNoUsers() {
-        // given
-        LocalDateTime start = LocalDate.now().atStartOfDay();
-        LocalDateTime end = LocalDate.now().atTime(23, 59, 59);
-
-        when(rewardRepository.countIssuedBetween(start, end)).thenReturn(0L);
-        when(rewardRepository.countDistinctUsersBetween(start, end)).thenReturn(0L);
-
-        // when
-        double perUserAverage = adminRewardService.getCurrentPerUserAverageIssued();
-
-        // then
-        assertThat(perUserAverage).isEqualTo(0.0);
-    }
-
-    @Test
-    @DisplayName("14. 검색 요청 검증 실패 테스트")
-    void testSearchRewardsValidationFailure() {
-        // given - 잘못된 검색 요청 (시작일 > 종료일)
-        AdminRewardDto.RewardSearchRequest invalidRequest = AdminRewardDto.RewardSearchRequest.builder()
-                .email("user1@example.com")
-                .startDate(LocalDate.of(2025, 4, 30))
-                .endDate(LocalDate.of(2025, 4, 1))  // 시작일보다 이른 종료일
-                .build();
-
-        Pageable pageable = PageRequest.of(0, 10);
-
-        // when & then
-        assertThatThrownBy(() -> adminRewardService.searchRewards(invalidRequest, pageable))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessage("리워드 검색에 실패했습니다.")
-                .hasCauseInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    @DisplayName("15. 월별 통계 - 데이터가 없는 월 처리")
-    void testMonthlyStatsWithMissingMonths() {
-        // given
-        List<Object[]> rawStats = List.of(
-                new Object[]{2024, 6, 12500},
-                new Object[]{2024, 8, 13000}  // 7월 데이터 없음
-        );
-        when(rewardRepository.findMonthlyIssuedStatsLast12Months(any())).thenReturn(rawStats);
-
-        // when
-        AdminRewardDto.MonthlyStatsResponse result = adminRewardService.getMonthlyRewardTrends();
-
-        // then
-        assertThat(result.getMonthlyRewardStatistics()).hasSize(12);
-
-        // 데이터가 있는 월 확인
-        AdminRewardDto.MonthlyRewardStat juneStat = result.getMonthlyRewardStatistics().stream()
-                .filter(stat -> stat.getMonth() == 6 && stat.getYear() == 2024)
-                .findFirst()
-                .orElse(null);
-        assertThat(juneStat).isNotNull();
-        assertThat(juneStat.getAmount()).isEqualTo(12500);
-
-        // 데이터가 없는 월은 0으로 처리
-        AdminRewardDto.MonthlyRewardStat julyStat = result.getMonthlyRewardStatistics().stream()
-                .filter(stat -> stat.getMonth() == 7 && stat.getYear() == 2024)
-                .findFirst()
-                .orElse(null);
-        assertThat(julyStat).isNotNull();
-        assertThat(julyStat.getAmount()).isEqualTo(0);
-    }
-
-    @Test
-    @DisplayName("16. 운전별 적립 - 빈 driveIds 처리")
-    void testRewardsByDriveWithEmptyList() {
-        // given
-        AdminRewardDto.RewardsByDriveRequest request = new AdminRewardDto.RewardsByDriveRequest(List.of());
+        AdminRewardDto.RewardsByDriveRequest request =
+                new AdminRewardDto.RewardsByDriveRequest(Collections.emptyList());
 
         // when
         AdminRewardDto.RewardsByDriveResponse result = adminRewardService.getRewardsByDrive(request);
 
         // then
         assertThat(result.getRewardsByDrive()).isEmpty();
-        verify(rewardRepository, never()).sumAmountByDriveId(any());
     }
 
     @Test
-    @DisplayName("17. 월별 사유별 통계 - 잘못된 월 형식 처리")
-    void testMonthlyReasonStatsWithInvalidMonthFormat() {
+    @DisplayName("25. 운전별 리워드 조회 - 예외 발생")
+    void getRewardsByDrive_Exception() {
         // given
-        String invalidMonth = "invalid-format";
-        when(rewardRepository.getMonthlyRewardStatsByReason(invalidMonth))
-                .thenReturn(List.of()); // 빈 결과 반환
+        List<String> driveIds = Arrays.<String>asList("drive1");
+        AdminRewardDto.RewardsByDriveRequest request =
+                new AdminRewardDto.RewardsByDriveRequest(driveIds);
 
-        // when
-        AdminRewardDto.MonthlyReasonStatsResponse result =
-                adminRewardService.getMonthlyRewardStatsByReason(invalidMonth);
+        given(rewardRepository.sumAmountByDriveId("drive1"))
+                .willThrow(new RuntimeException("Database error"));
 
-        // then
-        assertThat(result.getMonthlyRewardStatistics()).isEmpty();
-        verify(rewardRepository, times(1)).getMonthlyRewardStatsByReason(invalidMonth);
+        // when & then
+        assertThatThrownBy(() -> adminRewardService.getRewardsByDrive(request))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("운전별 리워드 조회에 실패했습니다.");
     }
 
-    @Test
-    @DisplayName("18. 성능 테스트 - 대용량 데이터 처리")
-    void testLargeDataProcessing() {
-        // given - 대용량 데이터 시뮬레이션
-        when(rewardRepository.getTotalIssued()).thenReturn(50_000_000L); // 5천만개
-        when(rewardRepository.countIssuedBefore(any()))
-                .thenReturn(45_000_000L)    // 한달 전
-                .thenReturn(40_000_000L);   // 두달 전
-
-        // when
-        long totalIssued = adminRewardService.getTotalIssued();
-        double changeRate = adminRewardService.getChangeRate();
-
-        // then
-        assertThat(totalIssued).isEqualTo(50_000_000L);
-        assertThat(changeRate).isEqualTo(12.5); // (45M - 40M) / 40M * 100
-
-        // 성능 검증 - 타임아웃 없이 완료되어야 함
-        verify(rewardRepository, times(1)).getTotalIssued();
-    }
+    // ===== 기타 헬퍼 메서드 테스트 =====
 
     @Test
-    @DisplayName("19. 엣지 케이스 - 음수 리워드 처리")
-    void testNegativeRewardHandling() {
-        // given - 차감된 리워드가 있는 경우
-        Reward negativeReward = Reward.builder()
-                .userId(1L)
-                .amount(-10L)  // 음수 리워드 (차감)
-                .type(RewardType.USED)
-                .description("종합점수")
-                .balanceSnapshot(990L)
-                .build();
-
-        ReflectionTestUtils.setField(negativeReward, "id", 2000L);
-        ReflectionTestUtils.setField(negativeReward, "createdAt", LocalDateTime.now());
-
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<Reward> page = new PageImpl<>(List.of(negativeReward));
-        when(rewardRepository.findAllByOrderByCreatedAtDesc(pageable)).thenReturn(page);
-
-        // when
-        Page<AdminRewardDto.AllRewardHistoryResponse.RewardHistoryItem> result =
-                adminRewardService.getAllRewardHistory(pageable);
-
-        // then
-        assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).getAmount()).isEqualTo(-10); // 음수 값 그대로 표시
-        assertThat(result.getContent().get(0).getRewardId()).isEqualTo("SEED_2000");
-    }
-
-    @Test
-    @DisplayName("20. 발급 사유별 통계 - 알 수 없는 사유 처리")
-    void testReasonStatsWithUnknownReason() {
-        // given
-        List<Object[]> rawStats = List.of(
-                new Object[]{"종합점수", 1200L},
-                new Object[]{"이벤트미발생", 3400L},
-                new Object[]{"알 수 없는 사유", 500L}  // RewardReason에 없는 사유
-        );
-        when(rewardRepository.getCurrentYearIssuedGroupedByReason()).thenReturn(rawStats);
-
-        // when
-        AdminRewardDto.TotalReasonStatsResponse result = adminRewardService.getTotalRewardStats();
-
-        // then
-        assertThat(result.getTotalRewardStatistics()).hasSize(3);
-
-        // 알 수 없는 사유는 "알 수 없음"으로 변환됨 (RewardReason.UNKNOWN)
-        AdminRewardDto.ReasonStat unknownStat = result.getTotalRewardStatistics().stream()
-                .filter(stat -> stat.getReason().equals("알 수 없음"))
-                .findFirst()
-                .orElse(null);
-        assertThat(unknownStat).isNotNull();
-        assertThat(unknownStat.getCount()).isEqualTo(500L);
-    }
-
-    @Test
-    @DisplayName("21. 필터링 - 모든 파라미터가 null일 때 처리")
-    void testFilterWithNullParameters() {
-        // given
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<Reward> emptyPage = Page.empty(pageable);
-
-        when(rewardRepository.filterRewards(isNull(), isNull(), isNull(), isNull(), eq(pageable)))
-                .thenReturn(emptyPage);
+    @DisplayName("26. 빈 리워드 리스트 매핑 테스트")
+    void mapToFilteredRewards_EmptyList() {
+        // given - 빈 페이지
+        String userId = "test-user-id";
+        Page<Reward> emptyPage = new PageImpl<>(Collections.emptyList(), PageRequest.of(0, 10), 0);
+        given(rewardRepository.filterRewards(eq(userId), isNull(), isNull(), isNull(), any(Pageable.class)))
+                .willReturn(emptyPage);
 
         // when
         AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
-                null, null, null, null, pageable
-        );
+                userId, null, null, null, null, PageRequest.of(0, 10));
 
         // then
         assertThat(result.getSearchResult()).isEmpty();
         assertThat(result.getPageInfo().getTotalElements()).isEqualTo(0);
+    }
 
-        verify(userClient, never()).getUserIdByEmail(anyString());
+    // ===== RewardReason enum 매핑 테스트 =====
+    @Test
+    @DisplayName("27. RewardReason enum 매핑 테스트")
+    void rewardReasonMapping_Test() {
+        // given & when & then
+        assertThat(RewardReason.fromDescription("종합점수")).isEqualTo(RewardReason.TOTAL_SCORE);
+        assertThat(RewardReason.fromDescription("이벤트미발생")).isEqualTo(RewardReason.EVENT_NOT_OCCURRED);
+        assertThat(RewardReason.fromDescription("MoBTI향상")).isEqualTo(RewardReason.MOBTI_IMPROVEMENT);
+        assertThat(RewardReason.fromDescription("알 수 없는 사유")).isEqualTo(RewardReason.UNKNOWN);
+
+        assertThat(RewardReason.TOTAL_SCORE.getLabel()).isEqualTo("종합점수");
+        assertThat(RewardReason.EVENT_NOT_OCCURRED.getLabel()).isEqualTo("이벤트미발생");
+        assertThat(RewardReason.MOBTI_IMPROVEMENT.getLabel()).isEqualTo("MoBTI향상");
+    }
+
+    // ===== 추가 테스트 케이스 =====
+
+    @Test
+    @DisplayName("28. 필터링 조회 - 모든 파라미터 사용")
+    void filterRewards_WithAllParameters() {
+        // given
+        String userId = "test-user-id";
+        String email = "test@example.com";
+        String description = "종합점수";
+        LocalDate startDate = LocalDate.of(2025, 4, 1);
+        LocalDate endDate = LocalDate.of(2025, 4, 30);
+        Pageable pageable = PageRequest.of(0, 10);
+
+        List<Reward> rewards = Arrays.<Reward>asList(sampleReward);
+        Page<Reward> rewardPage = new PageImpl<>(rewards, pageable, 1);
+        given(rewardRepository.filterRewards(
+                eq(userId), eq(description), any(LocalDateTime.class), any(LocalDateTime.class), eq(pageable)))
+                .willReturn(rewardPage);
+
+        // when
+        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
+                userId, email, description, startDate, endDate, pageable);
+
+        // then
+        assertThat(result.getSearchResult()).hasSize(1);
+        assertThat(result.getPageInfo().getTotalElements()).isEqualTo(1);
+
+        AdminRewardDto.FilteredReward filteredReward = result.getSearchResult().get(0);
+        assertThat(filteredReward.getRewardId()).isEqualTo("SEED_1");
+        assertThat(filteredReward.getUserId()).isEqualTo(userId);
+        assertThat(filteredReward.getDescription()).isEqualTo("종합점수");
+        assertThat(filteredReward.getAmount()).isEqualTo(100);
+        assertThat(filteredReward.getCreatedAt()).isEqualTo(now);
     }
 
     @Test
-    @DisplayName("22. 비즈니스 로직 테스트 - 이벤트미발생 리워드 검증")
-    void testEventNotOccurredRewardLogic() {
-        // given - 이벤트미발생이 가장 많은 경우 (안전운전 우수)
-        List<Object[]> rawStats = List.of(
-                new Object[]{"이벤트미발생", 5000L},       // 가장 많음 (안전운전)
-                new Object[]{"종합점수", 2000L},
-                new Object[]{"MoBTI향상", 1000L}
-        );
-        when(rewardRepository.getCurrentYearIssuedGroupedByReason()).thenReturn(rawStats);
+    @DisplayName("29. 필터링 조회 - startDate만 있는 경우")
+    void filterRewards_OnlyStartDate() {
+        // given
+        String userId = "test-user-id";
+        LocalDate startDate = LocalDate.of(2025, 4, 1);
+        Pageable pageable = PageRequest.of(0, 10);
+
+        List<Reward> rewards = Arrays.<Reward>asList(sampleReward);
+        Page<Reward> rewardPage = new PageImpl<>(rewards, pageable, 1);
+        given(rewardRepository.filterRewards(
+                eq(userId), isNull(), any(LocalDateTime.class), isNull(), eq(pageable)))
+                .willReturn(rewardPage);
 
         // when
-        AdminRewardDto.TotalReasonStatsResponse result = adminRewardService.getTotalRewardStats();
+        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
+                userId, null, null, startDate, null, pageable);
 
         // then
-        AdminRewardDto.ReasonStat eventNotOccurredStat = result.getTotalRewardStatistics().stream()
-                .filter(stat -> stat.getReason().equals("이벤트미발생"))
-                .findFirst()
-                .orElseThrow();
-
-        assertThat(eventNotOccurredStat.getCount()).isEqualTo(5000L);
-        assertThat(eventNotOccurredStat.getRatio()).isGreaterThan(50.0); // 과반수 이상
+        assertThat(result.getSearchResult()).hasSize(1);
+        verify(rewardRepository).filterRewards(
+                eq(userId), isNull(), any(LocalDateTime.class), isNull(), eq(pageable));
     }
 
     @Test
-    @DisplayName("23. 비즈니스 로직 테스트 - MoBTI향상 리워드 검증")
-    void testMobtiImprovementRewardLogic() {
-        // given - MoBTI향상 리워드 케이스
-        List<Object[]> rawStats = List.of(
-                new Object[]{"종합점수", 3000L},
-                new Object[]{"MoBTI향상", 1500L},          // 운전 성향 개선
-                new Object[]{"이벤트미발생", 2500L}
-        );
-        when(rewardRepository.getCurrentYearIssuedGroupedByReason()).thenReturn(rawStats);
+    @DisplayName("30. 필터링 조회 - endDate만 있는 경우")
+    void filterRewards_OnlyEndDate() {
+        // given
+        String userId = "test-user-id";
+        LocalDate endDate = LocalDate.of(2025, 4, 30);
+        Pageable pageable = PageRequest.of(0, 10);
+
+        List<Reward> rewards = Arrays.<Reward>asList(sampleReward);
+        Page<Reward> rewardPage = new PageImpl<>(rewards, pageable, 1);
+        given(rewardRepository.filterRewards(
+                eq(userId), isNull(), isNull(), any(LocalDateTime.class), eq(pageable)))
+                .willReturn(rewardPage);
 
         // when
-        AdminRewardDto.TotalReasonStatsResponse result = adminRewardService.getTotalRewardStats();
+        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
+                userId, null, null, null, endDate, pageable);
 
         // then
-        AdminRewardDto.ReasonStat mobtiStat = result.getTotalRewardStatistics().stream()
-                .filter(stat -> stat.getReason().equals("MoBTI향상"))
-                .findFirst()
-                .orElseThrow();
-
-        assertThat(mobtiStat.getCount()).isEqualTo(1500L);
-        assertThat(mobtiStat.getRatio()).isGreaterThan(0); // 향상된 사용자들이 있음
+        assertThat(result.getSearchResult()).hasSize(1);
+        verify(rewardRepository).filterRewards(
+                eq(userId), isNull(), isNull(), any(LocalDateTime.class), eq(pageable));
     }
 
     @Test
-    @DisplayName("24. 월별 사유별 통계 - 계절별 패턴 테스트")
-    void testSeasonalRewardPatterns() {
-        // given - 겨울철 안전운전이 더 중요한 시기 (가정)
-        String winterMonth = "2024-12";
-        List<Object[]> winterStats = List.of(
-                new Object[]{"이벤트미발생", 4000L},       // 겨울철 안전운전 증가
-                new Object[]{"종합점수", 2000L},
-                new Object[]{"MoBTI향상", 500L}
-        );
-        when(rewardRepository.getMonthlyRewardStatsByReason(winterMonth)).thenReturn(winterStats);
+    @DisplayName("31. 필터링 조회 - description만 있는 경우")
+    void filterRewards_OnlyDescription() {
+        // given
+        String userId = "test-user-id";
+        String description = "종합점수";
+        Pageable pageable = PageRequest.of(0, 10);
+
+        List<Reward> rewards = Arrays.<Reward>asList(sampleReward);
+        Page<Reward> rewardPage = new PageImpl<>(rewards, pageable, 1);
+        given(rewardRepository.filterRewards(
+                eq(userId), eq(description), isNull(), isNull(), eq(pageable)))
+                .willReturn(rewardPage);
 
         // when
-        AdminRewardDto.MonthlyReasonStatsResponse result =
-                adminRewardService.getMonthlyRewardStatsByReason(winterMonth);
+        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
+                userId, null, description, null, null, pageable);
 
         // then
-        AdminRewardDto.ReasonStat safetyReward = result.getMonthlyRewardStatistics().stream()
-                .filter(stat -> stat.getReason().equals("이벤트미발생"))
-                .findFirst()
-                .orElseThrow();
-
-        assertThat(safetyReward.getCount()).isEqualTo(4000L);
-        assertThat(safetyReward.getRatio()).isGreaterThan(60.0); // 겨울철 안전운전 비중 높음
+        assertThat(result.getSearchResult()).hasSize(1);
+        AdminRewardDto.FilteredReward filteredReward = result.getSearchResult().get(0);
+        assertThat(filteredReward.getDescription()).isEqualTo("종합점수");
     }
 
     @Test
-    @DisplayName("25. 모든 리워드 사유 테스트 - RewardReason enum 전체")
-    void testAllRewardReasonValues() {
-        // given - 모든 RewardReason 값들
-        List<Object[]> rawStats = List.of(
-                new Object[]{"종합점수", 1200L},          // TOTAL_SCORE
-                new Object[]{"이벤트미발생", 3400L},       // EVENT_NOT_OCCURRED
-                new Object[]{"MoBTI향상", 670L},          // MOBTI_IMPROVEMENT
-                new Object[]{"알 수 없음", 100L}          // UNKNOWN
-        );
-        when(rewardRepository.getCurrentYearIssuedGroupedByReason()).thenReturn(rawStats);
+    @DisplayName("32. 필터링 조회 - Repository 예외 발생")
+    void filterRewards_RepositoryException() {
+        // given
+        String userId = "test-user-id";
+        Pageable pageable = PageRequest.of(0, 10);
+
+        given(rewardRepository.filterRewards(
+                eq(userId), isNull(), isNull(), isNull(), eq(pageable)))
+                .willThrow(new RuntimeException("Database connection failed"));
+
+        // when & then
+        assertThatThrownBy(() -> adminRewardService.filterRewards(
+                userId, null, null, null, null, pageable))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("리워드 필터링에 실패했습니다.")
+                .hasCauseInstanceOf(RuntimeException.class);
+    }
+
+    @Test
+    @DisplayName("33. 통계 조회 - 일평균 변화율 계산")
+    void getDailyAverageChangeRate_Success() {
+        // given
+        given(rewardRepository.countIssuedBetween(any(LocalDateTime.class), any(LocalDateTime.class)))
+                .willReturn(160L) // 오늘
+                .willReturn(150L); // 어제
 
         // when
-        AdminRewardDto.TotalReasonStatsResponse result = adminRewardService.getTotalRewardStats();
+        double result = adminRewardService.getDailyAverageChangeRate();
 
         // then
-        assertThat(result.getTotalRewardStatistics()).hasSize(4);
+        assertThat(result).isEqualTo(6.7); // (160-150)/150 * 100 = 6.67% -> 반올림 6.7%
+    }
 
-        // 각 사유별로 정확히 매핑되는지 확인
-        Map<String, Long> reasonMap = result.getTotalRewardStatistics().stream()
-                .collect(java.util.stream.Collectors.toMap(
-                        AdminRewardDto.ReasonStat::getReason,
-                        AdminRewardDto.ReasonStat::getCount
-                ));
+    @Test
+    @DisplayName("34. 필터링 조회 - 대량 데이터")
+    void filterRewards_LargeDataSet() {
+        // given
+        String userId = "test-user-id";
+        Pageable pageable = PageRequest.of(0, 100);
 
-        assertThat(reasonMap.get("종합점수")).isEqualTo(1200L);
-        assertThat(reasonMap.get("이벤트미발생")).isEqualTo(3400L);
-        assertThat(reasonMap.get("MoBTI향상")).isEqualTo(670L);
-        assertThat(reasonMap.get("알 수 없음")).isEqualTo(100L);
+        // 대량 데이터 시뮬레이션
+        List<Reward> largeRewardList = new ArrayList<>();
+        for (int i = 1; i <= 50; i++) {
+            Reward reward = Reward.builder()
+                    .userId("user-" + i)
+                    .amount((long) (i * 10))
+                    .type(RewardType.EARNED)
+                    .description("종합점수")
+                    .balanceSnapshot(1000L + i)
+                    .driveId("drive-" + i)
+                    .build();
 
-        // 비율 합계가 100%인지 확인
-        double totalRatio = result.getTotalRewardStatistics().stream()
-                .mapToDouble(AdminRewardDto.ReasonStat::getRatio)
-                .sum();
-        assertThat(totalRatio).isCloseTo(100.0, org.assertj.core.data.Offset.offset(0.1));
+            // Reflection으로 ID와 createdAt 설정
+            try {
+                java.lang.reflect.Field idField = Reward.class.getDeclaredField("id");
+                idField.setAccessible(true);
+                idField.set(reward, (long) i);
+
+                java.lang.reflect.Field createdAtField = Reward.class.getDeclaredField("createdAt");
+                createdAtField.setAccessible(true);
+                createdAtField.set(reward, now.plusMinutes(i));
+            } catch (Exception e) {
+                throw new RuntimeException("Failed to set test fields", e);
+            }
+
+            largeRewardList.add(reward);
+        }
+
+        Page<Reward> largePage = new PageImpl<>(largeRewardList, pageable, 50);
+        given(rewardRepository.filterRewards(
+                eq(userId), isNull(), isNull(), isNull(), eq(pageable)))
+                .willReturn(largePage);
+
+        // when
+        AdminRewardDto.RewardFilterResponse result = adminRewardService.filterRewards(
+                userId, null, null, null, null, pageable);
+
+        // then
+        assertThat(result.getSearchResult()).hasSize(50);
+        assertThat(result.getPageInfo().getTotalElements()).isEqualTo(50);
+
+        // 첫 번째와 마지막 요소 검증
+        AdminRewardDto.FilteredReward firstReward = result.getSearchResult().get(0);
+        assertThat(firstReward.getRewardId()).isEqualTo("SEED_1");
+        assertThat(firstReward.getAmount()).isEqualTo(10);
+
+        AdminRewardDto.FilteredReward lastReward = result.getSearchResult().get(49);
+        assertThat(lastReward.getRewardId()).isEqualTo("SEED_50");
+        assertThat(lastReward.getAmount()).isEqualTo(500);
     }
 }
